cxf-core: fix Sonar warnings